--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,15 @@
 <html>
 <head>
 <title>DuA Folien</title>
-<meta http-equiv="refresh" content="0;url=pages/blog/index.html">
+<meta http-equiv="refresh" content="0;url=pages/blog-posts/index.html">
 <script>
-window.location.replace("pages/blog/index.html");
+window.location.replace("pages/blog-posts/index.html");
 </script>
 </head>
 <body>
-<a href="pages/blog/index.html">Proceed to the blog</a>
+<a href="pages/blog-posts/index.html">Proceed to the blog</a>
 <script>
-window.location.replace("pages/blog/index.html");
+window.location.replace("pages/blog-posts/index.html");
 </script>
 </body>
 </html>
