--- a/.build/pages/blog-posts/index.html
+++ b/.build/pages/blog-posts/index.html
@@ -17,10 +17,16 @@
 
     <ul>
             <li>
+                <h3><a href="../../posts/abstraction-in-buggy/index.html">Abstraction in Buggy</a><small>14 November - 2014</small></h3>
+                <article><p>Abstraction is a key concept in managing complexity. But creating good abstractions
+is hard. Often abstractions try to hide complexity but fail to improve usability.
+It is very important to not introduce new complexity by abstractions.</p></article>
+            </li>
+            <li>
                 <h3><a href="../../posts/buggy/index.html">Buggy</a><small>08 October - 2014</small></h3>
                 <article><p>Over the last few years a few colleges of me and looked at software development
 in general. How it is done and what problems arise in almost all projects. We
-looked at lots of programming languages and frameworks to understand the problems
+looked at lots of programming languages and frameworks to try to understand the problems
 of programming.</p></article>
             </li>
             <li>
