added nex vex-tab post (unfinished)

--- a/.build/pages/blog-posts/index.html
+++ b/.build/pages/blog-posts/index.html
@@ -17,6 +17,15 @@
 
     <ul>
             <li>
+                <h3><a href="../../posts/the-vextab-polymer-element/index.html">The VexTab Polymer Element!</a><small>19 November - 2014</small></h3>
+                <article><p>I recently discovered <a href="https://www.polymer-project.org/">Polymer</a> a new web 
+framework that utilizes the Web Components technology in a very neat way.
+Polymer helps you create new Web Components in a very intuitive, descriptive
+an simple fashion. And the best thing about it is that the Web Components
+technology doesn&#39;t rely on polymer, you can simply create a component that
+interacts with other Web Components created with e.g. <a href="http://www.x-tags.org/">x-Tags</a>.</p></article>
+            </li>
+            <li>
                 <h3><a href="../../posts/abstraction-in-buggy/index.html">Abstraction in Buggy</a><small>14 November - 2014</small></h3>
                 <article><p>Abstraction is a key concept in managing complexity. But creating good abstractions
 is hard. Often abstractions try to hide complexity but fail to improve usability.
