--- a/localhost:2368/stream-drawing-with-pivi/index.html
+++ b/localhost:2368/stream-drawing-with-pivi/index.html
@@ -12,7 +12,7 @@
 
     <link rel="shortcut icon" href="../favicon.ico">
 
-    <link rel="stylesheet" type="text/css" href="../assets/css/screen.css@v=053c1aa387" />
+    <link rel="stylesheet" type="text/css" href="../assets/css/screen.css?v=053c1aa387" />
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400" />
 
     <link rel="canonical" href="index.html" />
@@ -184,10 +184,10 @@ print("circle (40 40) 10 :fill yellow")
 
     </div>
 
-    <script src="../public/jquery.js@v=053c1aa387"></script>
+    <script src="../public/jquery.js?v=053c1aa387"></script>
 
-    <script type="text/javascript" src="../assets/js/jquery.fitvids.js@v=053c1aa387"></script>
-    <script type="text/javascript" src="../assets/js/index.js@v=053c1aa387"></script>
+    <script type="text/javascript" src="../assets/js/jquery.fitvids.js?v=053c1aa387"></script>
+    <script type="text/javascript" src="../assets/js/index.js?v=053c1aa387"></script>
 
 </body>
 </html>
