--- a/rss/index.html
+++ b/rss/index.html
@@ -1,5 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<rss xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:content="http://purl.org/rss/1.0/modules/content/" xmlns:atom="http://www.w3.org/2005/Atom" version="2.0" xmlns:media="http://search.yahoo.com/mrss/"><channel><title><![CDATA[LittleHelicase's Blog]]></title><description><![CDATA[LittleHelicase's Blog]]></description><link>http://localhost:2368/</link><generator>Ghost 0.6</generator><lastBuildDate>Mon, 01 Jun 2015 18:25:38 GMT</lastBuildDate><atom:link href="http://localhost:2368/rss/" rel="self" type="application/rss+xml"/><ttl>60</ttl><item><title><![CDATA[Stream drawing with Pivi]]></title><description><![CDATA[<h2 id="motivation">Motivation</h2>
+<rss xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:content="http://purl.org/rss/1.0/modules/content/" xmlns:atom="http://www.w3.org/2005/Atom" version="2.0" xmlns:media="http://search.yahoo.com/mrss/"><channel><title><![CDATA[LittleHelicase's Blog]]></title><description><![CDATA[LittleHelicase's Blog]]></description><link>http://localhost:2368/</link><generator>Ghost 0.6</generator><lastBuildDate>Mon, 01 Jun 2015 18:47:44 GMT</lastBuildDate><atom:link href="http://localhost:2368/rss/" rel="self" type="application/rss+xml"/><ttl>60</ttl><item><title><![CDATA[Ghost on Github]]></title><description><![CDATA[<p>You probably noticed that I'm using Ghost on GitHub, even though Ghost does not run on GitHub. If you don't know Ghost you should <a href="https://ghost.org">check it out now</a>!</p>
+
+<h2 id="settingupalocalghost">Setting up a local Ghost</h2>
+
+<p>I strongly recommend using <a href="https://www.docker.com/">Docker</a> if you can! With docker installed you simply run</p>
+
+<pre><code>docker run -d</code></pre>]]></description><link>http://localhost:2368/ghost-on-github/</link><guid isPermaLink="false">69f15cf0-e201-45c0-abe5-d9b98150958b</guid><dc:creator><![CDATA[Maximilian Klein]]></dc:creator><pubDate>Mon, 01 Jun 2015 18:47:32 GMT</pubDate><content:encoded><![CDATA[<p>You probably noticed that I'm using Ghost on GitHub, even though Ghost does not run on GitHub. If you don't know Ghost you should <a href="https://ghost.org">check it out now</a>!</p>
+
+<h2 id="settingupalocalghost">Setting up a local Ghost</h2>
+
+<p>I strongly recommend using <a href="https://www.docker.com/">Docker</a> if you can! With docker installed you simply run</p>
+
+<pre><code>docker run -d --name github-blog -v &lt;local-path&gt;:/var/lib/ghost -p 2368:2368 ghost  
+</code></pre>
+
+<p>This starts a new Docker container serving on 2368 named github-blog of ghost. All your data will be stored at <code>&lt;local-path&gt;</code>. With this Docker container you should use the standard 2368 port as some of Ghosts links will point nowhere otherwise (it strangly uses the server port and not the one the users uses).</p>
+
+<p>After this setup you can simply go to <code>localhost:2368/ghost</code> and start editing your blog.</p>
+
+<h2 id="mirroringwithwget">Mirroring with wget</h2>
+
+<p>At last you want to copy your files to GitHub. I use wget for this, which is essentially <code>wget localhost:2368</code>. But sadly it is not quite that simple, you want it to follow links and change some of them according to the file-type to avoid MIME conflicts etc. You can find my mirror script <a href="https://github.com/LittleHelicase/littlehelicase.github.io/blob/master/mirror_local_blog.sh">here</a>. <strong>But</strong>: Be careful running this script. It removes everything in the current folder before starting wget. It will <strong>remove</strong> your files without asking and without putting it into the trash!</p>]]></content:encoded></item><item><title><![CDATA[Stream drawing with Pivi]]></title><description><![CDATA[<h2 id="motivation">Motivation</h2>
 
 <p>While working in the university I supervised many student works. Most of them involved some form of programming and visualizing the results. I noticed that nearly all of the students put a lot of effort into creating an environment in which they can visualize their results. Some of them</p>]]></description><link>http://localhost:2368/stream-drawing-with-pivi/</link><guid isPermaLink="false">692c6f9e-3ef7-4fee-af69-6afa3f145683</guid><dc:creator><![CDATA[Maximilian Klein]]></dc:creator><pubDate>Mon, 01 Jun 2015 17:26:25 GMT</pubDate><content:encoded><![CDATA[<h2 id="motivation">Motivation</h2>
 
